# dagster-static

./: .flake8  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/dagster-static/: traits.py
src/dagster_static/: __init__.py
