[project]
name = "dagster-static"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.12.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "ruff>=0.14.3",
    "twine>=6.2.0",
]
