[project]
name = "dagster-static"
version = "0.1.0"
description = "Trait-based static validation system for Dagster assets"
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICENSE"]
authors = [
    {name = "Boris Resnick", email = "boris.resnick@gmail.com"},
]
maintainers = [
    {name = "Boris Resnick", email = "boris.resnick@gmail.com"},
]
keywords = [
    "dagster",
    "data-pipeline",
    "static-validation",
    "trait-system",
    "type-checking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "dagster>=1.12.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "ruff>=0.14.3",
    "twine>=6.2.0",
]
