[project]
name = "dagster-static"
version = "0.2.0"
description = "Trait-based static validation system for Dagster assets"
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICENSE"]
authors = [
    {name = "Boris Resnick", email = "boris.resnick@gmail.com"},
]
maintainers = [
    {name = "Boris Resnick", email = "boris.resnick@gmail.com"},
]
keywords = [
    "dagster",
    "data-pipeline",
    "static-validation",
    "trait-system",
    "type-checking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "dagster>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/scartill/dagster-static"
Changelog = "https://github.com/scartill/dagster-static/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dagster_static"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
